src/objects/wbsendit__AutoSubscription__c.object
<CustomObject>
    <description>Holds subscriber rule metadata. Manages the automatic addition and removal of subscribers to/from lists.</description>
    <fields>
        <fullName>wbsendit__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Criteria__c</fullName>
        <label>Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the rule will not run.</inlineHelpText>
        <label>Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Evaluation_Time__c</fullName>
        <label>Evaluation Time</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>wbsendit__Action__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Only when a record is created</fullName>
                </value>
                <value>
                    <fullName>Only when a record is edited</fullName>
                </value>
                <value>
                    <fullName>Every time a record is created or edited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Logic__c</fullName>
        <label>Logic Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Resubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resubscribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List_Id__c</fullName>
        <label>Subscriber List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List_Name__c</fullName>
        <label>Subscriber List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipLabel>Automatic Subscriptions</relationshipLabel>
        <relationshipName>Automatic_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Automatic Subscription</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Object__c</columns>
        <columns>wbsendit__Action__c</columns>
        <columns>wbsendit__Evaluation_Time__c</columns>
        <columns>wbsendit__Subscriber_List_Name__c</columns>
        <columns>wbsendit__Subscriber_List_Id__c</columns>
        <columns>wbsendit__Subscriber_List__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automatic Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>